k8s/postavke-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postavke-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postavke
  template:
    metadata:
      labels:
        app: postavke
    spec:
      containers:
        - image: ts4894/postavke:2022-01-02-12-45-49
          name: postavke
          ports:
            - containerPort: 8084
              name: server
              protocol: TCP


---

apiVersion: v1
kind: Service
metadata:
  name: postavke
spec:
  type: LoadBalancer
  ports:
    - port: 8084
      protocol: TCP
      targetPort: server
  selector:
    app: postavke
